--- a/src/main/resources/static/admin/customer_orders/css/list.css
+++ b/src/main/resources/static/admin/customer_orders/css/list.css
@@ -22,8 +22,8 @@
     color: red !important;
 }
 
-.text-color-green {
-    color: #10A142 !important;
+.text-color-blue {
+    color: #4777F6 !important;
 }
 
 .dt_data_text_center {
