--- a/src/main/resources/static/admin/supplier_orders/css/detail.css
+++ b/src/main/resources/static/admin/supplier_orders/css/detail.css
@@ -1,24 +1,27 @@
 .order-info-area {
 	display: flex;
 	justify-content: space-between;
-	color: #000000;
-	margin-top: 45px;	
+	margin-top: 45px;
 	margin-bottom: 5px;	
 }
 
+.title-wrap {
+	display: flex;
+	flex-direction: column;
+}
+
 .search-list-title {
-	color: #000000;
+	margin-bottom: 5px;
 }
 
 .order-info {
 	font-size: 16px;
     font-weight: 700;
-    color: #000000;
     line-height: 40px;
 }
 
 .table-column-area, .table-data-area {
-	display: flex;
+	height: 50px;
 }
 
 .total-price-area {
@@ -36,17 +39,20 @@
 .table-column-area {
 	display: flex;
 	text-align: center;
-	padding: 8px 8px;
+	padding: 17px 8px;
 	border-top: solid 1px #D8D8D8;
 	border-bottom: solid 1px #D8D8D8;
 	background-color: #FAFAFA;
+	font-weight: 700;
+	color: #7E7E7E;
 }
 
 .table-data-area {
 	display: flex;
 	text-align: center;
-	padding: 8px 8px;
+	padding: 17px 8px;
 	border-bottom: solid 1px #D8D8D8;
+	color: #7E7E7E;
 }
 
 .no-column, .no-data { width: 5%; }
