--- a/src/main/resources/templates/admin/home/home.html
+++ b/src/main/resources/templates/admin/home/home.html
@@ -78,8 +78,8 @@
                 <th class="table-column-head-txt">NO</th>
                 <th class="table-column-head-txt">제목</th>
                 <th class="table-column-head-txt">분류</th>
+                <th class="table-column-head-txt">문의일</th>
                 <th class="table-column-head-txt">답변여부</th>
-                <th class="table-column-head-txt">작성일</th>
             </tr>
             </thead>
             <tbody></tbody>
