--- a/src/main/resources/templates/admin/reviews/reviewDetails.html
+++ b/src/main/resources/templates/admin/reviews/reviewDetails.html
@@ -41,7 +41,7 @@
 			</div>
 			<div class="text-group">
 				<span class="search-list-subject">내용</span>
-				<span th:text="${reviews.review_content}"></span>
+				<span class="review-content" th:text="${reviews.review_content}"></span>
 			</div>
 		</div>
 	</div>
