--- a/src/main/resources/static/admin/inventory_log/css/detail.css
+++ b/src/main/resources/static/admin/inventory_log/css/detail.css
@@ -1,19 +1,16 @@
-.table-column-area {
+.table-column-area, .table-data-area {
 	display: flex;
 	text-align: center;
 	padding: 8px 8px;
-	border-top: solid 1px #D8D8D8;
 	border-bottom: solid 1px #D8D8D8;
-	background-color: #FAFAFA;
-	line-height: 30px;
+	line-height: 33px;
+	color: #7E7E7E;
 }
 
-.table-data-area {
-	display: flex;
-	text-align: center;
-	padding: 8px 8px;
-	border-bottom: solid 1px #D8D8D8;
-	line-height: 30px;
+.table-column-area {
+	border-top: solid 1px #D8D8D8;
+	background-color: #FAFAFA;
+	font-weight: 700;
 }
 
 .date-font {
