--- a/src/main/resources/static/admin/products/css/edit-product.css
+++ b/src/main/resources/static/admin/products/css/edit-product.css
@@ -80,10 +80,15 @@ input[type=text]:not(.placeholder, .search-input, .input-price) {
     width: 90%;
     height: 280px;
     padding: 10px;
-    border: 1px solid #7E7E7E;
+    border: 1px solid #C0C0C0;
     border-radius: 5px;
     font-size: 16px;
     resize: none;
+}
+
+.custom-textarea:focus {
+    outline: none;
+    border: 1px solid #7E7E7E;
 }
 
 .button-wrap {
