--- a/src/main/resources/static/admin/reviews/css/reviews.css
+++ b/src/main/resources/static/admin/reviews/css/reviews.css
@@ -1,45 +1,61 @@
+.search-list-title {
+    margin-bottom: 20px;
+}
 
-.table-container {
-   margin-top : 20px;
-   height: 70%; /* 화면의 하단 70% */
-   background: #FFFFFF;
-   border-radius: 20px;
-   padding: 20px;
-   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-   overflow-y: auto; /* 테이블 내용이 넘칠 경우 스크롤 */
+.filter-info {
+    display: flex;
+    align-items: center;
+    height: 60px;
+    border-bottom: 1px solid #c0c0c0;
+    padding-left: 20px;
+}
+
+.filter-wrap {
+    display: flex;
+    gap: 10px;
+}
+
+.date-picker {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.table-title-wrap {
+    margin-bottom: 10px;
 }
 
 .header h1 {
-   font-weight: 700;
-   font-size: 18px;
-   line-height: 24px;
-   color: #000000;
-   margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 20px;
 }
 
 .content {
-   display: flex;
-   flex-direction: column;
-   gap: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
 
 .label {
-   font-size: 16px;
-   line-height: 24px;
-   color: #000000;
-   margin-left: 40px;
-   margin-right: 60px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+    margin-left: 40px;
+    margin-right: 60px;
 }
 
 .input-box {
-   display: flex;
-   align-items: center;
-   width: 210px;
-   height: 40px;
-   padding: 0 10px;
-   background: #FFFFFF;
-   border: 1px solid #C0C0C0;
-   border-radius: 5px;
+    display: flex;
+    align-items: center;
+    width: 210px;
+    height: 40px;
+    padding: 0 10px;
+    background: #FFFFFF;
+    border: 1px solid #C0C0C0;
+    border-radius: 5px;
 }
 
 /*
@@ -53,28 +69,28 @@
 
 /* 두 줄로 안넘어가게 */
 .text-ellipsis {
-   white-space: nowrap;
-   overflow: hidden;
-   text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .input-group {
-   display: flex;
-   justify-content: space-between;
-   width: 100%;
-   align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
 }
 
 .input-group input {
-   border: none;
-   outline: none;
-   width: 100%;
-   font-size: 16px;
-   color: #000000;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 16px;
+    color: #000000;
 }
 
 .calendar-slash {
-   margin-top: 8px;
+    margin-top: 8px;
 }
 
 #reset-button {
@@ -82,108 +98,118 @@
 }
 
 .stars {
-   font-size: 20px; /* 별 크기 조정 */
-   color: #4777F6;
+    font-size: 20px; /* 별 크기 조정 */
+    color: #4777F6;
 }
 
 .empty-stars {
-   font-size: 20px; /* 빈 별 크기 조정 */
-   color: lightgray; /* 빈 별 색상 */
+    font-size: 20px; /* 빈 별 크기 조정 */
+    color: lightgray; /* 빈 별 색상 */
 }
 
 
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+    font-variation-settings: 'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
 }
 
 #reviews td, #reviews th {
-   text-align: center;
-   vertical-align: middle; 
+    text-align: center;
+    vertical-align: middle;
 }
 
 #inquiries td, #inquiries th {
-   text-align: center;
-   vertical-align: middle; 
-}
-#notice td, #notice th {
-   text-align: center;
-    vertical-align: middle; 
-}   
-/* Center the DataTable pagination controls */
-#reviews_wrapper>.dt-paging {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    text-align: center;
+    vertical-align: middle;
 }
 
-#member_wrapper>.dt-paging {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+#notice td, #notice th {
+    text-align: center;
+    vertical-align: middle;
 }
+
+/* Center the DataTable pagination controls */
+#reviews_wrapper > .dt-paging {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#member_wrapper > .dt-paging {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #inquiries_wrapper > .dt-paging {
-   display : flex;
-   justify-content: center;
-   align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* reviewDetails.html */
 .text-title {
-   font-size: 24px;
-      font-weight: 800;
-   margin-bottom: 50px;
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 50px;
 
 }
+
 .text-group {
-   display: grid;
-   grid-template-columns: 100px 1fr;
-   align-items: center;
-   gap: 10px;
-   border-bottom: 1px solid #C0C0C0;
-   padding: 20px 20px;
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    align-items: center;
+    gap: 10px;
+    border-bottom: 1px solid #C0C0C0;
+    padding: 20px 20px;
 }
 
 .table-total-row {
-   margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 table td:not([align]) {
-   text-align: center !important;
+    text-align: center !important;
 }
 
 .btn-box {
-   display: flex;
-   justify-content: center;
-   align-items: center; gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 30px;
 }
 
-/* 공지사항 노출비노출 */ 
+/* 공지사항 노출비노출 */
 .status-btn-wrap {
-   margin-left: 74px;
+    margin-left: 74px;
 }
+
 .selected-row {
     background-color: #FAFAFA;
 }
 
 /* 테이블 짝수줄 배경 삭제 */
 .table.is-striped tbody tr:not(.is-selected):nth-child(2n) {
-   background-color: transparent;
+    background-color: transparent;
 }
 
 .review-list-wrap {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .button-wrap-review {
-	display:flex;
-	align-items: center;
-	justify-content: flex-end;
-	gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+}
+
+.review-content {
+    line-height: 26px;
 }
