--- a/src/main/resources/static/admin/warehouse/css/warehouseDetails.css
+++ b/src/main/resources/static/admin/warehouse/css/warehouseDetails.css
@@ -1,8 +1,7 @@
 .info {
+    height: 60px;
 	display: flex;
     align-items: center;
-    padding-bottom: 15px;
-    padding-top : 15px;
     padding-left : 20px;
     border-bottom: 1px solid #C0C0C0;
     gap : 10px;
@@ -45,7 +44,6 @@ input[type=number]{
 }
 
 .select-arrow-down {
-  
     left: 80px;
 }    
 
