--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -7,19 +7,19 @@
 	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 	<style>
 		textarea {
-			width: 100%; 
-			min-height: 230px; 
-			height: auto; 
-			padding: 10px; 
-			border-radius: 5px; 
-			border: 1px solid #c0c0c0; 
-			display: block; 
-			color: #666666; 
+			width: 100%;
+			min-height: 230px;
+			height: auto;
+			padding: 10px;
+			border-radius: 5px;
+			border: 1px solid #c0c0c0;
+			display: block;
 			resize: none;
+			font-size: 16px;
 		}
 	
 		textarea:focus {
-			border: 1px solid #C0C0C0; /* 포커스 시에도 기본 보더 유지 */
+			border: 1px solid #666666; /* 포커스 시에도 기본 보더 유지 */
 			outline: none; /* 포커스 시 아웃라인 제거 */
 		}
 
@@ -49,7 +49,6 @@
 			<span>뒤로가기</span>
 		</button>
 
-		<!-- 리뷰 상세 정보 박스 -->
 		<div class="white-frame">
 			<div class="text-title">
 				<span th:text="'문의번호 : ' + ${inquiries.inquiry_num}"></span>
@@ -112,7 +111,7 @@
 
 		<form th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}" th:object="${inquiries}" method="POST">
 			<div class="white-frame answer-area">
-				<div class="text-group" style="border-bottom: none;">
+				<div class="text-group" style="border-bottom: none; padding: 0;">
 					<span class="search-list-subject">답변내용</span> 
 					
 					<input type="hidden" th:field="*{inquiry_num}">
