--- a/src/main/resources/templates/admin/reviews/reviews.html
+++ b/src/main/resources/templates/admin/reviews/reviews.html
@@ -7,7 +7,7 @@
 
 	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
 	<link rel="stylesheet" href="/admin/common/css/modal.css">
-	<link rel="stylesheet" href="/admin/products/css/products.css"/>	
+<!--	<link rel="stylesheet" href="/admin/products/css/products.css"/>-->
 
 <div>
 	<div class="filter-container white-frame">
@@ -74,9 +74,9 @@
 						<label for="select-all"></label>
 					</th>
 					<th class="table-column-head-txt">NO</th>
-					<th class="table-column-head-txt">내용</th>
 					<th class="table-column-head-txt">책 제목</th>
 					<th class="table-column-head-txt">ISBN</th>
+					<th class="table-column-head-txt">내용</th>
 					<th class="table-column-head-txt">작성자</th>
 					<th class="table-column-head-txt">작성일</th>
 					<th class="table-column-head-txt">별점</th>
