--- a/src/main/resources/templates/admin/common/fragments/config.html
+++ b/src/main/resources/templates/admin/common/fragments/config.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BOOKSTORE 관리자</title>
+	<title>WHALE BOOKS 관리자</title>
 	
 	<link rel="shortcut icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
 	<link rel="icon" th:href="@{/admin/common/img/favicon.ico}" type="image/x-icon">
