--- a/src/main/resources/templates/admin/notice/noticeDetails.html
+++ b/src/main/resources/templates/admin/notice/noticeDetails.html
@@ -60,7 +60,7 @@
 
 			<div class="btn-box">
 				<button id="save-button" class="default-btn">수정</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/notice/notice'">취소</button>
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/notice/list'">취소</button>
 			</div>
 
 
