--- a/src/main/resources/templates/admin/warehouse/warehouseDetail.html
+++ b/src/main/resources/templates/admin/warehouse/warehouseDetail.html
@@ -51,7 +51,7 @@
 			
 			<div class="button-wrap-warehouseDetails">
 				<button type="submit" id="reg-button" class="default-btn" >수정</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/warehouse/warehouse'" >
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/warehouse/list'" >
 				      <span>뒤로가기</span>
 				</button>
 			</div>
