--- a/src/main/resources/templates/user/common/fragments/config.html
+++ b/src/main/resources/templates/user/common/fragments/config.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BOOKSTORE</title>
+	<title>WHALE BOOKS</title>
 
 	<link rel="shortcut icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
 	<link rel="icon" th:href="@{/user/common/imgs/favicon.ico}" type="image/x-icon">
