--- a/src/main/resources/templates/admin/banners/bannerDetail.html
+++ b/src/main/resources/templates/admin/banners/bannerDetail.html
@@ -70,7 +70,7 @@
             
             <div class="button-wrap submit-btns">
                 <button type="submit" id="update-button"class="default-btn">수정</button>
-                <button class="default-btn cancel" onclick="location.href='/admin/banners/banners'">취소</button>
+                <button class="default-btn cancel" onclick="location.href='/admin/banners/list'">취소</button>
             </div>
         </form>
     </div>
