--- a/src/main/resources/templates/admin/banners/bannerInsert.html
+++ b/src/main/resources/templates/admin/banners/bannerInsert.html
@@ -73,7 +73,7 @@
 			
 			<div class="button-wrap submit-btns">
 				<button type="submit" id="insert-button" class="default-btn">등록</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/banners/banners'">취소</button>
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/banners/list'">취소</button>
 			</div>
 		</form>
 	</div>
