--- a/src/main/resources/templates/admin/managers/managerReg.html
+++ b/src/main/resources/templates/admin/managers/managerReg.html
@@ -125,7 +125,7 @@
 			
 			<div class="btn">
 				<button type="submit" id="reg-button" class="default-btn" style="margin-right: 20px;" >등록</button>
-				<button class="default-btn cancel" onclick="location.href='/admin/managers/managers'">
+				<button class="default-btn cancel" onclick="location.href='/admin/managers/list'">
 				      <span>뒤로가기</span>
 				</button>
 			</div>
