--- a/src/main/resources/templates/admin/members/memberDetails.html
+++ b/src/main/resources/templates/admin/members/memberDetails.html
@@ -95,7 +95,7 @@
 		</div>
 		<div class="btn">
 			<button type="submit" class="default-btn" style="margin-right: 20px;">수정</button>
-			<button class="default-btn cancel" onclick="location.href='/admin/members/members'">
+			<button class="default-btn cancel" onclick="location.href='/admin/members/list'">
 			      <span>뒤로가기</span>
 			</button>
 		</div>
