--- a/src/main/resources/templates/admin/notice/noticeReg.html
+++ b/src/main/resources/templates/admin/notice/noticeReg.html
@@ -57,7 +57,7 @@
 
 			<div class="btn-box">
 				<button id="save-button" class="default-btn">등록</button>
-				<button type="button" class="default-btn cancel" onclick="location.href='/admin/notice/notice'">취소</button>
+				<button type="button" class="default-btn cancel" onclick="location.href='/admin/notice/list'">취소</button>
 			</div>
 
 	</div>
