--- a/src/main/resources/templates/admin/products/edit-product.html
+++ b/src/main/resources/templates/admin/products/edit-product.html
@@ -166,7 +166,7 @@
 
     <div class="button-wrap">
         <button class="default-btn" form="edit-form">수정</button>
-        <button class="default-btn cancel" onclick="location.href='/admin/products/products'">
+        <button class="default-btn cancel" onclick="location.href='/admin/products/list'">
             취소
         </button>
     </div>
