--- a/src/main/resources/templates/admin/supplier_orders/supplierList.html
+++ b/src/main/resources/templates/admin/supplier_orders/supplierList.html
@@ -37,6 +37,17 @@
 				</div>
 			</div>
 			<div class="filter-info">
+				<p class="search-list-subject">발주상태</p>
+				<div class="filter-wrap radio-filter">
+					<input type="radio" id="order-status-all" name="order_status" value="" checked="checked"/>
+					<label for="order-status-all">전체</label>
+					<input type="radio" id="order-status-pending" name="order_status" value="pending"/>
+					<label for="order-status-pending">입고대기</label>
+					<input type="radio" id="order-status-completion" name="order_status" value="completion"/>
+					<label for="order-status-completion">입고완료</label>
+				</div>
+			</div>
+			<div class="filter-info">
 				<p class="search-list-subject">검색어</p>
 				<div class="filter-wrap search-bar">					
 				
