--- a/src/main/resources/templates/mobile/common/fragments/config.html
+++ b/src/main/resources/templates/mobile/common/fragments/config.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>BOOKSTORE</title>
+	<title>WHALEBOOKS 모바일</title>
 
 	<link rel="stylesheet" href="/mobile/common/css/reset.css"/>
     <link rel="stylesheet" href="/mobile/common/css/sample.css"/>
