--- a/src/main/resources/templates/mobile/common/fragments/footer.html
+++ b/src/main/resources/templates/mobile/common/fragments/footer.html
@@ -7,10 +7,12 @@
 <nav id="tabbar">
     <ul class="menu-list">
         <li class="menu-item">
-            <div class="icon-wrap">
-                <i class="fa-solid fa-house tab-icon"></i>
-            </div>
-            <p>홈</p>
+        	<a href="/mobile/admin/index">
+	            <div class="icon-wrap">
+	                <i class="fa-solid fa-house tab-icon"></i>
+	            </div>
+	            <p>홈</p>
+        	</a>
         </li>
         <li class="menu-item">
             <div class="icon-wrap">
