--- a/src/main/resources/templates/mobile/common/fragments/config.html
+++ b/src/main/resources/templates/mobile/common/fragments/config.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" href="/mobile/common/css/reset.css"/>
     <link rel="stylesheet" href="/mobile/common/css/sample.css"/>
-	
+	<link rel="stylesheet" href="/user/common/css/pagination.css" />
 
 	<!-- 폰트어썸 -->
 	<script src="https://kit.fontawesome.com/302ba19bbe.js" crossorigin="anonymous"></script>
