--- a/src/main/resources/templates/mobile/home/delivery_detail.html
+++ b/src/main/resources/templates/mobile/home/delivery_detail.html
@@ -8,6 +8,17 @@
 <div class="mobile-inner" style="gap: 23px;"> 
 	<h3 class="menu-title">배송요청내역</h3>
 	
-	
+	<div class="white-frame scroll" style="height: 53rem">
+		<p class="sub-title">요청번호:<span th:text="${orderNum}"></span></p>
+		<div class="content-list" th:each="item : ${list}">
+			<div class="content-text-wrap" style="width: 22rem">
+				<span class="content-text" th:text="'ISBN: ' + ${item.book_isbn}"></span>
+				<p class="content-sub-txt elipsis"><span th:text="'책제목:' + ${item.book_name}"></span></p>
+			</div>
+			<div style="text-align: end">
+				<p class="content-text"><span th:text="${item.order_detail_qty} + 권"></span></p>
+			</div>
+		</div>
+	</div>
 </div>
 </html>
