Feat : 모바일 출고하기 디자인, 리스트 출력

--- a/src/main/resources/templates/mobile/home/home.html
+++ b/src/main/resources/templates/mobile/home/home.html
@@ -21,13 +21,15 @@
 	    </div>
 	    
 	    <div class="enter-menu">
-	        <div class="left-wrap" onclick="">
-	            <svg data-slot="icon" fill="none" stroke-width="2" stroke="currentColor" viewBox="-5 -5 35 35" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-	                <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5m-13.5-9L12 3m0 0 4.5 4.5M12 3v13.5"></path>
-	            </svg>
-	            <p>출고하기</p>
-		        <i class="fa-solid fa-angle-right" aria-hidden="true"></i>
-	        </div>
+		    <a href="/mobile/admin/dispatch-page" style="display: block; text-decoration: none;">
+			    <div class="left-wrap">
+			        <svg data-slot="icon" fill="none" stroke-width="2" stroke="currentColor" viewBox="-5 -5 35 35" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+			            <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5m-13.5-9L12 3m0 0 4.5 4.5M12 3v13.5"></path>
+			        </svg>
+			        <p>출고하기</p>
+			        <i class="fa-solid fa-angle-right" aria-hidden="true"></i>
+			    </div>
+			</a>
 	    </div>
 	</div>
 	
