--- a/src/main/resources/static/user/mypage/notices/css/notices-detail.css
+++ b/src/main/resources/static/user/mypage/notices/css/notices-detail.css
@@ -14,6 +14,7 @@
 	border-top: 1px solid #C0C0C0;
 	border-bottom: 1px solid #C0C0C0;
 	padding: 20px 20px 20px 20px;
+	min-height: 500px;
 	
 }
 .myinfo-content {
