Fix: 기능 및 노출 문구 오류 수정

--- a/src/main/resources/static/user/mypage/purchase_cancle/css/returnRequest.css
+++ b/src/main/resources/static/user/mypage/purchase_cancle/css/returnRequest.css
@@ -426,3 +426,9 @@
 .modal-font-size {
 	font-size: 14px;
 }
+
+.warning-message {
+    margin: -10px 0 0 150px;
+    font-size: 14px;
+    color: #E54F53;
+}
