--- a/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancleCompletion.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div>
-				<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price, 0, 'COMMA')} + '원'"></span>
+				<span class="book-price" th:text="${#numbers.formatInteger(detail.order_detail_price * detail.order_request_qty, 0, 'COMMA')} + '원'"></span>
 			</div>	
 			<div>
 				<span class="order_status" th:text="${detail.order_detail_status}"></span>
