--- a/src/main/resources/templates/user/mypage/customer_order/cancleList.html
+++ b/src/main/resources/templates/user/mypage/customer_order/cancleList.html
@@ -92,7 +92,7 @@
 		</div>
 	</div>
 	<div class="btn-area">
-		<button class="cancle-btn" onclick="orderCancleBtn()">취소신청</button>
+		<button class="cancle-btn" onclick="orderCancleBtn();">취소신청</button>
 		<button class="back-btn" onclick="location.href='/user/mypage/orderList'">이전으로</button>
 	</div>
 </div>
