--- a/src/main/resources/static/user/mypage/account/css/memberUpdate.css
+++ b/src/main/resources/static/user/mypage/account/css/memberUpdate.css
@@ -118,3 +118,14 @@
 .content-gap {
   	margin-bottom: 25px;
 }
+
+.delete-btn-on {
+	width: 80px;
+    height: 40px;
+    border: 10px;
+    border-radius: 10px;
+	background-color: rgba(126, 126, 126, 0.863);
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+}
