--- a/src/main/resources/templates/user/common/layout/myPageLayout.html
+++ b/src/main/resources/templates/user/common/layout/myPageLayout.html
@@ -16,7 +16,7 @@
                     <img src="" alt="" class="user-img"/>
 <!--                    <i class="fa-solid fa-circle-user"></i>-->
                 </div>
-                <p class="user-name">길동이</p>
+                <p class="user-name">[[${session.member.member_name}]]</p>
             </div>
             <ul class="menu-list">
                 <li class="menu-item">
