--- a/src/main/resources/static/user/mypage/orderList/css/orderList.css
+++ b/src/main/resources/static/user/mypage/orderList/css/orderList.css
@@ -122,7 +122,7 @@
 	width: 200px;
 	display: flex;
 	gap: 5px;
-	display: flex;
+	text-align: start;
 }
 
 .book-thumbnail {
@@ -132,7 +132,7 @@
 }
 
 .book-name {
-	max-width: 150px;
+    max-width: 156px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
@@ -145,12 +145,12 @@
 	text-overflow: ellipsis;
 }
 
-
 .order-detail-status {
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
 }
+
 .return-cancel-btn {
 	width: 60px;
 	height: 30px;
@@ -161,5 +161,5 @@
 }
 
 .result-wrap {
-    border: none;
+	border: none;
 }
