--- a/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
+++ b/src/main/resources/templates/admin/inquiries/inquiriesDetails.html
@@ -1,134 +1,134 @@
 <!DOCTYPE html>
-<html lang="ko" 
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{/admin/common/layout/defaultlayout}"
-    layout:fragment="Content">
-	<link rel="stylesheet" href="/admin/reviews/css/reviews.css" />
-	<style>
-		textarea {
-			width: 100%;
-			min-height: 230px;
-			height: auto;
-			padding: 10px;
-			border-radius: 5px;
-			border: 1px solid #c0c0c0;
-			display: block;
-			resize: none;
-			font-size: 16px;
-		}
-	
-		textarea:focus {
-			border: 1px solid #666666; /* 포커스 시에도 기본 보더 유지 */
-			outline: none; /* 포커스 시 아웃라인 제거 */
-		}
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{/admin/common/layout/defaultlayout}"
+      layout:fragment="Content">
+<link rel="stylesheet" href="/admin/reviews/css/reviews.css"/>
+<style>
+    textarea {
+        width: 100%;
+        min-height: 230px;
+        height: auto;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid #c0c0c0;
+        display: block;
+        resize: none;
+        font-size: 16px;
+    }
 
-		.answer-area {
-			margin-top: 30px; 
-			min-height: 350px;
-			height: auto;
-		}
-		/* 테이블 헤더 스타일 */
-		th {
-			padding: 10px;
-			text-align: left;
-			font-weight: bold;
-		}
+    textarea:focus {
+        border: 1px solid #666666; /* 포커스 시에도 기본 보더 유지 */
+        outline: none; /* 포커스 시 아웃라인 제거 */
+    }
 
-		/* 테이블 데이터 셀 스타일 */
-		td {
-			padding: 10px;
-		}
-	</style>
+    .answer-area {
+        margin-top: 30px;
+        min-height: 350px;
+        height: auto;
+    }
 
-<div>
-	<div class="container" style="padding-bottom: 30px;" th:with="status = ${inquiries.inquiry_answer_status}">
-		<!-- 뒤로가기 버튼 -->
-		<button class="back-btn" onclick="location.href='/admin/inquiries/list'">
-			<i class="fa-solid fa-chevron-left"></i> 
-			<span>뒤로가기</span>
-		</button>
+    /* 테이블 헤더 스타일 */
+    th {
+        padding: 10px;
+        text-align: left;
+        font-weight: bold;
+    }
 
-		<div class="white-frame">
-			<div class="text-title">
-				<span th:text="'문의번호 : ' + ${inquiries.inquiry_num}"></span>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">제목</span> 
-				<span th:text="${inquiries.inquiry_title}"></span>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">작성자</span> 
-				<span th:text="${inquiries.member_id}"></span>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">작성날짜</span> 
-				<span th:text="${#dates.format(inquiries.inquiry_write_date, 'YYYY-MM-dd HH:mm')}"></span>
+    /* 테이블 데이터 셀 스타일 */
+    td {
+        padding: 10px;
+    }
+</style>
 
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">문의 분류</span> 
-				<span th:text="${inquiries.inquiry_type}"></span>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">내용</span> 
-				<span th:text="${inquiries.inquiry_content}"></span>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">파일첨부</span>
-				<div class="img-input-wrap">
-					<label for="input-file" class="input-file-label">
-						<a th:href="@{/admin/download?(img=${inquiries.inquiries_changed})}">
-							<img alt="사진" th:src="@{/images/books/{book}(book=${inquiries.inquiries_changed})}">
-						</a>
-					</label>
-				</div>
-			</div>
-			<div class="text-group">
-				<span class="search-list-subject">답변여부</span> 
-				<span th:text="${status}" th:style="'color: ' + (${status == '처리완료'} ? '#10A142' : (${status == '미완료'} ? '#F69E47' : ''))"></span>
-			</div>
-			<div class="text-group" 
-			     th:if="${inquiries.inquiry_type == '취소문의' or 
+<!-- 뒤로가기 버튼 -->
+<button class="back-btn" onclick="location.href='/admin/inquiries/list'">
+    <i class="fa-solid fa-chevron-left"></i>
+    <span>뒤로가기</span>
+</button>
+
+<div class="white-frame" th:with="status = ${inquiries.inquiry_answer_status}">
+    <div class="text-title">
+        <span th:text="'문의번호 : ' + ${inquiries.inquiry_num}"></span>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">제목</span>
+        <span th:text="${inquiries.inquiry_title}"></span>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">작성자</span>
+        <span th:text="${inquiries.member_id}"></span>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">작성날짜</span>
+        <span th:text="${#dates.format(inquiries.inquiry_write_date, 'YYYY-MM-dd HH:mm')}"></span>
+
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">문의 분류</span>
+        <span th:text="${inquiries.inquiry_type}"></span>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">내용</span>
+        <span th:text="${inquiries.inquiry_content}"></span>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">파일첨부</span>
+        <div class="img-input-wrap">
+            <label for="input-file" class="input-file-label">
+                <a th:href="@{/admin/download?(img=${inquiries.inquiries_changed})}">
+                    <img alt="사진" th:src="@{/images/books/{book}(book=${inquiries.inquiries_changed})}">
+                </a>
+            </label>
+        </div>
+    </div>
+    <div class="text-group">
+        <span class="search-list-subject">답변여부</span>
+        <span th:text="${status}"
+              th:style="'color: ' + (${status == '처리완료'} ? '#10A142' : (${status == '미완료'} ? '#F69E47' : ''))"></span>
+    </div>
+    <div class="text-group"
+         th:if="${inquiries.inquiry_type == '취소문의' or
 			            inquiries.inquiry_type == '교환문의' or 
 			            inquiries.inquiry_type == '반품문의'}">
-					<span class="search-list-subject">주문 번호</span>
-				<div>
-					<span th:text="${inquiries.order_num}"></span>
-				</div>
-					<span class="search-list-subject">주문 상세번호</span>
-				<div>
-					<span th:text="${inquiries.order_detail_num}"></span>
-				</div>
-					<span class="search-list-subject">요청 수량</span>
-				<div>
-					<span th:text="${inquiries.order_request_qty}"></span>
-				</div>
-				
-			</div>
-		</div>
+        <span class="search-list-subject">주문 번호</span>
+        <div>
+            <span th:text="${inquiries.order_num}"></span>
+        </div>
+        <span class="search-list-subject">주문 상세번호</span>
+        <div>
+            <span th:text="${inquiries.order_detail_num}"></span>
+        </div>
+        <span class="search-list-subject">요청 수량</span>
+        <div>
+            <span th:text="${inquiries.order_request_qty}"></span>
+        </div>
 
-
-		<form th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}" th:object="${inquiries}" method="POST">
-			<div class="white-frame answer-area">
-				<div class="text-group" style="border-bottom: none; padding: 0;">
-					<span class="search-list-subject">답변내용</span> 
-					
-					<input type="hidden" th:field="*{inquiry_num}">
-					
-					<textarea th:field="*{answer_content}"
-						th:attr="placeholder=${status == '미완료' ? '내용을 입력하세요' : ''}"
-						th:utext="${status == '처리완료' ? status : ''}"
-						maxlength="1000">
-            		</textarea>
-				</div>
-				<div class="btn-box">
-					<button type="submit" class="default-btn" th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
-					<button type="button" class="default-btn cancel" onclick="location.href='/admin/inquiries/list'">취소</button>
-				</div>
-			</div>
-		</form>
-		
-	</div>
+    </div>
 </div>
+
+
+<form th:action="@{${status == '처리완료' ? '/admin/inquiries/update' : '/admin/inquiries/insert'}}"
+      th:object="${inquiries}" method="POST">
+    <div class="white-frame answer-area">
+        <div class="text-group" style="border-bottom: none; padding: 0;">
+            <span class="search-list-subject">답변내용</span>
+
+            <input type="hidden" th:field="*{inquiry_num}">
+
+            <textarea th:field="*{answer_content}"
+                      th:attr="placeholder=${status == '미완료' ? '내용을 입력하세요' : ''}"
+                      th:utext="${status == '처리완료' ? status : ''}"
+                      maxlength="1000">
+            		</textarea>
+        </div>
+        <div class="btn-box">
+            <button type="submit" class="default-btn"
+                    th:text="${inquiries.inquiry_answer_status == '처리완료' ? '수정' : '등록'}"></button>
+            <button type="button" class="default-btn cancel" onclick="location.href='/admin/inquiries/list'">취소</button>
+        </div>
+    </div>
+</form>
+
 </html>
