Fix: 사이드메뉴 홈에서 넘어올 때 기능 수정

--- a/src/main/resources/static/admin/home/css/home.css
+++ b/src/main/resources/static/admin/home/css/home.css
@@ -1,6 +1,4 @@
 /* 대시보드 헤더 */
-
-/* 이너안에 있어야 너비가 맞음*/
 .dashboard-header {
     width: 100%;
     display: flex;
@@ -140,8 +138,7 @@
     color: #4777F6;
 }
 
-.text-ellipsis {
-    display: inline-block;
+.text-eclipse {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
