--- a/src/main/resources/templates/admin/common/fragments/sidebar.html
+++ b/src/main/resources/templates/admin/common/fragments/sidebar.html
@@ -10,13 +10,13 @@
   <ul class="menu-list">
     <li class="menu-items" onclick="location.href='/admin/home'">
       <div class="menu-content">
-        <img src="/admin/common/img/bar-active.png" alt="bar" class="bar-img" />
+        <img src="/admin/common/img/bar-active.png" alt="bar" class="bar-img home" />
         <div class="menu-right">
           <div class="menu-text">
             <div class="icon-img-wrap">
-              <i class="fa-solid fa-house icon-img"></i>
+              <i class="fa-solid fa-house icon-img home"></i>
             </div>
-            <p>홈</p>
+            <p class="home">홈</p>
           </div>
         </div>
       </div>
