Fix : 어드민 페이지 공지사항, 1:1 문의 수정

--- a/src/main/resources/static/admin/notice/css/noticeReg.css
+++ b/src/main/resources/static/admin/notice/css/noticeReg.css
@@ -62,3 +62,13 @@
 	align-items: center;
 	gap: 10px;
 }
+
+.char-count {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
+
+.char-count span {
+	display: inline-block;
+}
