--- a/src/main/resources/static/admin/reviews/css/reviews.css
+++ b/src/main/resources/static/admin/reviews/css/reviews.css
@@ -213,3 +213,13 @@ table td:not([align]) {
 .review-content {
     line-height: 26px;
 }
+
+.char-count {
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+}
+
+.char-count span {
+	display: inline-block;
+}
