--- a/src/main/resources/templates/user/mypage/member_update/memberUpdateDetail.html
+++ b/src/main/resources/templates/user/mypage/member_update/memberUpdateDetail.html
@@ -97,7 +97,7 @@
         <div class="info">
             <span class="search-list-subject">주소</span>
             <div>
-                <input type="text" id="address_kakao" class="input-long" th:value="${userMembers.member_addr}"/>
+                <input type="text" id="address_kakao" class="input-long" th:value="${userMembers.member_addr}" readonly/>
             </div>
         </div>
 
@@ -145,6 +145,6 @@
 	<script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 	<script src="/user/mypage/account/js/memberUpdateDetail.js"></script>
 	<script src="/user/mypage/account/js/socialLoginManager.js"></script>
-	
 	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	
 </html>
