--- a/src/main/resources/templates/admin/notice/noticeReg.html
+++ b/src/main/resources/templates/admin/notice/noticeReg.html
@@ -50,8 +50,13 @@
 
 			<div class="info">
 				<span class="search-list-subject important">내용</span>
-				<div contenteditable="true" class="editor" id="editor">
-					여기에 텍스트를 입력하거나 이미지를 드래그 앤 드롭하세요...
+				<div style="position:relative;">
+					<div contenteditable="true" class="editor" id="editor">
+						여기에 텍스트를 입력하거나 이미지를 드래그 앤 드롭하세요...
+					</div>
+					<p class="char-count">
+						<span id="charCount">0</span><span>/1000</span>
+					</p>
 				</div>
 			</div>
 
